[package]
description = "Mommy's here to support you when running cargo~"
repository = "https://github.com/Gankra/cargo-mommy"
license = "MIT OR Apache-2.0"
name = "cargo-mommy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# This affects if a given response is *supported* in the built binary,
# not if it's enabled by default
default = ["thirsty", "yikes"]

thirsty = []
yikes = []

[dependencies]
fastrand = "1.8.0"

[build-dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
