[package]
description = "Mommy's here to support you when running cargo~"
repository = "https://github.com/Gankra/cargo-mommy"
license = "MIT OR Apache-2.0"
name = "cargo-mommy"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# This affects if a given response is *supported* in the built binary,
# not if it's enabled by default
default = ["thirsty", "yikes"]

thirsty = []
yikes = []

[dependencies]
fastrand = "2.0.1"

[build-dependencies]
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde-tuple-vec-map = "1.0.1"
regex = "1.10.2"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="# Unreleased", replace="# Unreleased\n\nNothing Yet!\n\n\n# Version {{version}} ({{date}})", exactly=1},
]
